# tpcicd

./: .coverage  .gitlab-ci.yml  README.md  coverage.xml  pyproject.toml
src/my_arithmetic2_aprigent/: pgcd.py
tests/: test_pgcd.py
