[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic2-aprigent"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/my-arithmetic2-aprigent#readme"
Issues = "https://github.com/U.N. Owen/my-arithmetic2-aprigent/issues"
Source = "https://github.com/U.N. Owen/my-arithmetic2-aprigent"

[tool.hatch.version]
path = "src/my_arithmetic2_aprigent/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic2_aprigent tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic2_aprigent", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic2_aprigent/__about__.py",
]

[tool.coverage.paths]
my_arithmetic2_aprigent = ["src/my_arithmetic2_aprigent", "*/my-arithmetic2-aprigent/src/my_arithmetic2_aprigent"]
tests = ["tests", "*/my-arithmetic2-aprigent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
